[gd_scene load_steps=6 format=2]

[ext_resource path="res://objects/Object.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/Obstacle.gd" type="Script" id=2]
[ext_resource path="res://sprites/[Base]BaseChip_pipo.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.5, 11.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24.5, 21.5 )

[node name="Obstacle" instance=ExtResource( 1 )]
script = ExtResource( 2 )
size = Vector2( 29, 23 )

[node name="HitBox" parent="." index="0"]
shape = SubResource( 1 )

[node name="SpawnDetectorShape" parent="SpawnDetector" index="0"]
shape = SubResource( 2 )

[node name="Label" parent="." index="2"]
text = "True"

[node name="Sprite" type="Sprite" parent="." index="3"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 33, 263, 29, 23 )

[node name="Tween" type="Tween" parent="." index="4"]
[connection signal="area_entered" from="." to="." method="_on_Obstacle_area_entered"]
